A small adddition to the page content.

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Everyone</title>
 </head>
 <body>
-<h1>whoops</h1>
+<h1>whoops! boo ba dooba dooba doo ba dooba dooba doo doo.</h1>
 </body>
 </html>
